[package]
name = "rytorr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.68"
bendy = { version = "0.3.3", features = ["serde"] }
clap = { version = "4.3.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["full"] }
ureq = "2.8.0"
url = "2.3.1"

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
codegen-units = 1024
