[package]
name = "rytorr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bendy = { version = "0.3.3", features = ["serde"] }
chrono = "0.4.38"
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["full"] }
ureq = "2.9.7"
urlencoding = "2.1.3"
