[package]
name = "rytorr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-channel = "2.3.1"
bendy = { version = "0.3.3", features = ["serde"] }
bit-vec = "0.8.0"
chrono = "0.4.38"
hex = "0.4.3"
once_cell = "1.19.0"
rand = "0.8.5"
sha1 = "0.10.6"
tokio = { version = "1.38.0", features = ["full"] }
torrex = "0.2.1"
ureq = "2.9.7"
url = "2.5.2"
urlencoding = "2.1.3"
